# text2sql

./: .gitignore  README.md  app.py  pyproject.toml  sample_pg.sql
